fixed white spacing

--- a/style.css
+++ b/style.css
@@ -177,14 +177,16 @@ body {
     overflow: hidden;
     margin-bottom: 5rem;
     position: relative;
+    white-space: pre-wrap;
 }
 
 .text-container::after {
     content: '';
     width: 100%;
-    height: 3rem ;
+    height: 3rem;
     position: absolute;
     top: 6rem;
+    left: 0;
     background-image: linear-gradient(transparent 0%, #343A40 100%);
     /* rgba(52, 58, 62) */
 }
